Pressing accesskey for label should focus the target element after the label click event. b=346529 r+sr=bzbarsky